--- a/index.html
+++ b/index.html
@@ -8,7 +8,46 @@ Christina Doolan | Student Page
 	<meta name=”viewpoint” content= “width=device-width, initial-scale-1>
 
 	<style> 
-		
+		h2{
+			text-align: center;
+		}
+		#content{
+			width: 900px;
+			margin-left: auto;
+			margin-right:auto;
+			background-color: lightgrey;
+		}
+		#sec2{
+			display: flex;
+			width: 600px;
+			
+
+		}
+		#info{
+			margin: 10px;
+			margin-left: auto;
+			margin-right:auto; 
+		}
+		#classes{
+			margin: 10px;
+			margin-left: auto;
+			margin-right:auto; 
+		}
+		#sec3{
+			display: flex;
+			width: 600px;
+
+		}
+		#assign{
+			margin: 10px;
+			margin-left: auto;
+			margin-right:auto; 
+		}
+		#labs{
+			margin: 10px;
+			margin-left: auto;
+			margin-right:auto; 
+		}
 	</style>
 
 
