--- a/index.html
+++ b/index.html
@@ -81,7 +81,8 @@ Christina Doolan | Student Page
 			<h2> Completed Labs </h2>
 			<ol> 
 			<li><a href="index.html"> Lab 1: Student Page (current page)</a> </li>  
-			
+			<li><a href="lab_02/lab_02.html"> Lab 2: currency exchange</a> </li> 
+
 			</ol> 
 		</div> <!-- labs -->
 	</div> <!-- sec3 -->
