--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@ Christina Doolan | Student Page
 		<div id="assign">
 			<h2> Completed Assignments</h2>
 			<ol> 
-			
+			<li><a href="assignment_02/shopping_cart.html"> Assign 2: Shopping cart</a> </li>  
 			</ol>
 		</div> <!-- assign -->
 
