--- a/index.html
+++ b/index.html
@@ -82,6 +82,7 @@ Christina Doolan | Student Page
 			<ol> 
 			<li><a href="index.html"> Lab 1: Student Page (current page)</a> </li>  
 			<li><a href="lab_02/lab_02.html"> Lab 2: currency exchange</a> </li> 
+			<li><a href="lab_03/shopping_cart.html"> Lab 3: Shopping Cart Update</a> </li> 
 
 			</ol> 
 		</div> <!-- labs -->
