--- a/index.html
+++ b/index.html
@@ -74,6 +74,7 @@ Christina Doolan | Student Page
 			<h2> Completed Assignments</h2>
 			<ol> 
 			<li><a href="assignment_02/shopping_cart.html"> Assign 2: Shopping cart</a> </li>  
+			<li><a href="assignment_03/calculator.html"> Assign 2: Shopping cart</a> </li> 
 			</ol>
 		</div> <!-- assign -->
 
