--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@ Christina Doolan | Student Page
 			<h2> Completed Assignments</h2>
 			<ol> 
 			<li><a href="assignment_02/shopping_cart.html"> Assign 2: Shopping cart</a> </li>  
-			<li><a href="assignment_03/calculator.html"> Assign 3: calculator</a> </li> 
+			<li><a href="assignment_03/calculator.html"> Assign 3: Calculator</a> </li> 
 			</ol>
 		</div> <!-- assign -->
 
