--- a/index.html
+++ b/index.html
@@ -73,6 +73,7 @@ Christina Doolan | Student Page
 		<div id="assign">
 			<h2> Completed Assignments</h2>
 			<ol> 
+			<a href="assignment_01/gallery.html"> Assign 1: Image Gallery</a> 
 			<li><a href="assignment_02/shopping_cart.html"> Assign 2: Shopping cart</a> </li>  
 			<li><a href="assignment_03/calculator.html"> Assign 3: Calculator</a> </li> 
 			</ol>
