--- a/index.html
+++ b/index.html
@@ -75,7 +75,8 @@ Christina Doolan | Student Page
 			<ol> 
 			<a href="assignment_01/gallery.html"> Assign 1: Image Gallery</a> 
 			<li><a href="assignment_02/shopping_cart.html"> Assign 2: Shopping cart</a> </li>  
-			<li><a href="assignment_03/calculator.html"> Assign 3: Calculator</a> </li> 
+			<li><a href="assignment_03/calculator.html"> Assign 3: Calculator</a> </li>
+			<li><a href="assignment_04/dice.html"> Assign 4:Liar's Dice</a> </li>  
 			</ol>
 		</div> <!-- assign -->
 
