--- a/index.html
+++ b/index.html
@@ -87,6 +87,7 @@ Christina Doolan | Student Page
 			<li><a href="lab_02/lab_02.html"> Lab 2: currency exchange</a> </li> 
 			<li><a href="lab_03/shopping_cart.html"> Lab 3: Shopping Cart Update</a> </li> 
 			<li><a href="lab_04/gallery.html"> Lab 4: Updated Image Gallery</a> </li> 
+			<li><a href= "https://stackblitz.com/edit/react-hdhh8q?file=src%2Findex.js"> Lab 4: Updated Image Gallery</a> </li> 
 
 			</ol> 
 		</div> <!-- labs -->
