--- a/index.html
+++ b/index.html
@@ -78,7 +78,10 @@ Christina Doolan | Student Page
 			<li><a href="assignment_03/calculator.html"> Assign 3: Calculator</a> </li>
 			<li><a href="assignment_04/dice.html"> Assign 4:Liar's Dice</a> </li>  
 			<li><a href="https://stackblitz.com/edit/react-ahrlzz?file=public%2Findex.html"> Assign 5:Static Page</a> </li>  
+
+			<li><a href="https://stackblitz.com/edit/react-vc4p7z?file=public%2Findex.html"> Assign 6:Shopping cart</a> </li>  
 			</ol>
+
 
 		</div> <!-- assign -->
 
