--- a/index.html
+++ b/index.html
@@ -93,7 +93,8 @@ Christina Doolan | Student Page
 			<li><a href="lab_03/shopping_cart.html"> Lab 3: Shopping Cart Update</a> </li> 
 			<li><a href="lab_04/gallery.html"> Lab 4: Updated Image Gallery</a> </li> 
 			<li><a href= "https://stackblitz.com/edit/react-hdhh8q?file=src%2Findex.js"> Lab 5: React Student Page</a> </li> 
-			<li><a href= "https://stackblitz.com/edit/react-dstxgp?file=src%2Findex.js"> Lab 6: Static Page with Components</a> </li> 
+			<li><a href= "https://stackblitz.com/edit/react-dstxgp?file=src%2Findex.js"> Lab 6: Static Page with Components</a> </li>
+			<li><a href= "https://stackblitz.com/edit/react-amwssn?file=public%2Findex.html "> Lab 7: React Photo Gallery</a> </li>  
 
 			</ol> 
 		</div> <!-- labs -->
