--- a/index.html
+++ b/index.html
@@ -80,6 +80,7 @@ Christina Doolan | Student Page
 			<li><a href="https://stackblitz.com/edit/react-ahrlzz?file=public%2Findex.html"> Assign 5:Static Page</a> </li>  
 
 			<li><a href="https://stackblitz.com/edit/react-vc4p7z?file=public%2Findex.html"> Assign 6:Shopping cart</a> </li>  
+			<li><a href="https://stackblitz.com/edit/react-95k4a5?file=public%2Findex.html"> Assign 7:Shopping cart Item Count</a> </li>
 			</ol>
 
 
