--- a/index.html
+++ b/index.html
@@ -102,6 +102,8 @@ Christina Doolan | Student Page
 	</div> <!-- sec3 -->
 </div> <!--all content -->
 
+	<p> <a href= "final_project_ITP104/home.html"> Design Portfolio Updated</a></p>
+
 <script>
 document.querySelector("#color").onclick = function (  ){ 
 	document.querySelector("body") .style.backgroundColor = "#099";
