--- a/Design_Portfolio/home.html
+++ b/Design_Portfolio/home.html
@@ -117,6 +117,10 @@ Portfolio_CDoolan_Home
 		margin-right:250px;
 	}
 	
+	#code {
+		margin-left: 150px;
+		margin-top: -20px;
+	}
 </style>
 
 
@@ -140,6 +144,7 @@ Portfolio_CDoolan_Home
  	<div class="sec1">
  		<div  id="left">
 	 		<img id="name" src= "img/name.png" alt="CJD"> 
+	 		 <p id="code"> Portfolio coded using HTML, CSS, & JavaScript in Sublime Text </p>
 	 		<a href= "https://www.linkedin.com/in/christina-doolan-36b1a224a/" target =_blank>
 	 			<img id="linked" src= "img/linkedin.png" alt= "linkedin">
 	 		</a>
