--- a/Design_Portfolio/adobe.html
+++ b/Design_Portfolio/adobe.html
@@ -37,7 +37,7 @@ Adobe
  	<div class="sec1">
  		<div  class="left">
 	 		<h1> Adobe Work </h1>
-	 		<p> I have taken various courses during my time at USC focusing on Adobe software and other digital illustration platforms. Adobe is a software company that offers a wide range of design software used by professionals and individuals alike. Some of the most popular design software in their suite includes Adobe Photoshop, Illustrator, InDesign, and Acrobat. With this software, users can create and edit images, graphics, videos, and other types of digital content. </p>
+	 		<p> I have taken various courses focusing on Adobe software and other digital illustration platforms. Adobe is a software company that offers a wide range of design software used by professionals and individuals alike. Some of the most popular design software in their suite includes Adobe Photoshop, Illustrator, InDesign, and Acrobat. With this software, users can create and edit images, graphics, videos, and other types of digital content.</p>
 	 	</div> <!-- leftsection of home screen -->
  		<div class="right">
  			<img id="banner" src="adobe/vector-combo.jpeg" alt="face image">
