--- a/Design_Portfolio/dynamic.html
+++ b/Design_Portfolio/dynamic.html
@@ -58,7 +58,7 @@ UX/UI
  	<div class="sec1">
  		<div class="left">
 	 		<h1> UX/UI Designs </h1>
-	 		<p>The designs below include website coding and website designing. The goal for these dynamic designs was to engage users and enhance their experience by creating a visually appealing and easy-to-use interface.</p>
+	 		<p>The designs below include websites that have been coded and designed for optimal user engagment. The goal for these dynamic designs was to enhance user experience by creating a visually appealing and easy-to-use interface.</p>
 	 	</div> <!-- leftsection of home screen -->
  		<div class="right">
  			<img id="banner" src="dynamic/brain.png" alt="face image">
@@ -90,7 +90,7 @@ UX/UI
 	 		
 		</div> <!-- left text -->
 		<div class="description">
-				<p> As a developer, I found it incredibly rewarding to code my own design portfolio website. It allowed me to showcase my skills and creativity in both design and development. I started by sketching out my ideas on paper and creating a wireframe. Then, I translated those ideas into code using HTML, CSS, and JavaScript. It was a challenge to make sure the site was visually appealing while also being user-friendly. I enjoyed experimenting with different layouts, typography, and color schemes until I found the perfect combination. Overall, coding my design portfolio was a great experience that allowed me to combine my passion for design and development.</p>
+				<p> As an aspiring product designer, I found it incredibly rewarding to code my design portfolio website. It allowed me to showcase my skills and creativity in both design and development. I started by sketching my ideas and creating a Figma wireframe. Then, I translated those ideas into code using HTML, CSS, and JavaScript. It was a challenge to make the site visually appealing and user-friendly. I enjoyed experimenting with different layouts, typography, and color schemes until I found the perfect combination. Overall, coding my design portfolio was a great experience that allowed me to combine my passion for design and development.</p>
 		</div> <!-- descriptioin -->
 	</div><!--  organic post		 -->
 
@@ -155,7 +155,7 @@ UX/UI
 	 		
 		</div> <!-- left text -->
 		<div class="description">
-				<p> The goal of this website was to show users how they might construct their own site in a way that was both visually appealing and understandable. The 5 main topics I focused on were Shape, Color, Mental Models, Gestalt Principles, and Dual Processing. I wanted to combine psychology principles and design principles into an interactive and educational page. </p>
+				<p> The goal of this website was to show users how they might construct their site in a way that was both visually appealing and understandable. The 5 main topics I focused on were Shape, Color, Mental Models, Gestalt Principles, and Dual Processing. I wanted to combine psychology principles and design principles into an interactive and educational page. </p>
 		</div> <!-- descriptioin -->
 	</div><!--  organic post		 -->
 
@@ -178,7 +178,7 @@ UX/UI
 					</form>
 				</div>
 				<div class="sc-button">
-					<form action="adobe.html">
+					<form action="execed.html">
 							<button class="scbutton" type="submit"> Next Project → </button> 
 					</form>
 				</div>
