--- a/Design_Portfolio/execed.html
+++ b/Design_Portfolio/execed.html
@@ -77,7 +77,7 @@ Execed
 <div class="sec1">
  		<div class="left">
 	 		<h1> USC Marshall <br> Executive Education </h1>
-	 		<p> In this internship I develop visual and written content to promote events, programs, and other initiatives on our main social channels - Facebook, Instagram, Twitter, TikTok, and LinkedIn. I also work closely with the USC marketing department, to meet specific project goals. Finally, I assist in developing content for promotional posters, brochures, and adverting. </p>
+	 		<p> In this internship, I develop visual and written content to promote events, programs, and other initiatives on Marshall Executive Education's main social channels - Facebook, Instagram, Twitter, TikTok, and LinkedIn. I also work closely with USC marketing to meet specific project goals. Finally, I assist in developing content for promotional posters, brochures, and advertising. </p>
 	 	</div> <!-- leftsection of home screen -->
  		<div class="right">
  			<img id="banner" src="execed/sec1.png" alt="face image">
@@ -93,7 +93,7 @@ Execed
 
 
 <div class="strip">
-		<h2> Process Book: Playing Cards Project </h2>
+		<h2> Process Book: USC Marshall Executive Education Selected Projects </h2>
 	</div> 
 
 	<div class="section">
@@ -340,7 +340,7 @@ Execed
 					</form>
 				</div>
 				<div class="sc-button">
-					<form action="dynamic.html">
+					<form action="adobe.html">
 							<button class="scbutton" type="submit"> Next Project → </button> 
 					</form>
 				</div>
