--- a/Design_Portfolio/productsc.html
+++ b/Design_Portfolio/productsc.html
@@ -20,21 +20,15 @@ Rebrands
 	margin-bottom: 50px;
 }
 	
-	#row2{
-	 	display: flex;
-	 	justify-content: center; 
-	 	
-	}
-	#beforeafter {
-		width: 380px;
-	}
-.img-duo {
-	width:250px;
-	margin: 10px;
-}
+
 .text-trio{
 	text-align: center;
 }
+
+#first-draft {
+	width: 75%;
+}
+.
 </style>
 </head>
 <body>
@@ -45,6 +39,7 @@ Rebrands
 		
  		<a href= "home.html" >Home </a>
  		<a href= "home.html#work">Projects </a>
+ 		<a href= "gallery.html">Gallery </a>
  		<a href= "resume.html">About Me </a>
  	</div> <!-- nav bar -->
 
@@ -54,42 +49,141 @@ Rebrands
 
 <div class="sec1">
  		<div  class="left">
-	 		<h1> Company Redesign</h1>
-	 		<p> This section showcases the remarkable transformation of two distinct entities: Ravinia College Consulting and Product SC- A USC club. For Ravinia, the rebranding effort breathed new life into their identity, reflecting their commitment to academic excellence with a modern and professional logo. In the case of Product SC, my team and I repositioned the USC club as a hub of innovation and entrepreneurship, giving it a dynamic and collaborative new look. These projects exemplify expertise in creating compelling and relevant brand identities that inspire and engage audiences.</p>
+	 		<h1> Product SC</h1>
+	 		<p> I am a part of the USC club, Innovation Design. In this club, I was tasked with redesigning a club logo (ProductSC) and creating a new brand identity. The first step in the process was researching the club's values, mission, and target audience, as well as the broader market context in which the club operates. With this information, I was able to develop a logo that represented the club's unique identity and resonated with its audience. This logo could then be integrated into a broader brand identity, which included colors, typography, imagery, and messaging. I worked to create a cohesive and memorable brand that could stand out in a competitive market, attract new members, and strengthen the club's relationship with its existing ones.</p>
 	 	</div> <!-- leftsection of home screen -->
  		<div class="right">
- 			<img id="banner" src="productsc/sticker3.png" alt="face image">
+ 			<img id="banner" src="productsc/home.png" alt="face image">
  		</div>
 
  </div><!--  first section -->
 
 
 
+<div class="container reveal active">
+
+<div class="organic">
+ 		<div class="left-1">
+ 			<div class="title">
+	 			<img class="leaf" src="img/leaf-03.png" alt="-">
+	 			 <h2>Problem Statement</h2>  
+	 		</div><!--  section title -->
+	 		
+		</div> <!-- left text -->
+		<div class="description">
+				<p> 
+Revamp and rebrand the "Product SC" club with a team of four designers, aiming to create a fresh and captivating visual identity that resonates with the club's mission and values. The rebrand should encompass a new logo, color scheme, website, and promotional materials, with the primary goal of attracting and engaging a broader and more diverse audience, including students and professionals interested in product management and related fields.</p>
+		</div> <!-- descriptioin -->
+	</div><!--  organic post		 -->
 
 
-<hr>
+<div id="inspiration">
+	<h3 class="descriptor"> Inspiration </h3>
+	<div class="trio">
+		<img class="img-trio" src="productsc/inspo-1.jpeg" alt="inspo-1">
+		<img class="img-trio" src="productsc/inspo-2.png" alt="inspo-1">
+		<img class="img-trio" src="productsc/inspo-3.png" alt="inspo-1">
+	</div>
 
+</div>
 
+	<div id="inspiration">
+	<h3 class="descriptor"> Design Process </h3>
+	<div class="trio">
+		<p id="item"> Define Project </p>
+		<img class="arrow" src="dynamic/arrow.png" alt="-->">
+		<p id="item"> Visual Research </p>
+		<img class="arrow" src="dynamic/arrow.png" alt="-->">
+		<p id="item"> Lo-Fi</p>
+		<img class="arrow" src="dynamic/arrow.png" alt="-->">
+		<p id="item"> Whole Club Feedback </p>
+		<img class="arrow" src="dynamic/arrow.png" alt="-->">
+		<p id="item">Mid-Fi</p>
 
+			<img class="arrow" src="dynamic/arrow.png" alt="-->">
+		<p id="item"> Whole Club Feedback</p>
 
-
-<div class="strip">
-		<h2> Process Book: Ravinia Logo Redesign</h2>
-	</div> 
-
-	<div class="section">
-			
-		<iframe name="my-frame" src="img/ravinia.pdf"> </iframe>
+		<img class="arrow" src="dynamic/arrow.png" alt="-->">
+		<p id="item"> High-Fi</p>
+		<img class="arrow" src="dynamic/arrow.png" alt="-->">
+			<p id="item">Present to Product SC</p>
+	</div>
+</div>
 
 </div>
 
 
 
-<hr>
+
+
+<div class="container reveal active">
+<div class="strip">
+		<h2> Drafts </h2>
+	</div> 
+
+	<div class="section">
+		<div class="trio">
+		<img id="first-draft" src="productsc/draft-1.jpg" alt="draft-1">
+		
+	</div>
+</div>
+
+
+<div class="container reveal active">
+<div class="strip">
+		<h2> Refined Drafts </h2>
+	</div> 
+
+
+	<div class="trio">
+		<img class="img-trio" src="productsc/inspo-04.png" alt="draft-1">
+		<img class="img-trio" src="productsc/draft2.png" alt="draft-1">
+		<img class="img-trio" src="productsc/inspo-06.png" alt="draft-1">
+	</div>
+</div>
+
+</div>
+
+<div class="container reveal active">
+
+
+
+
+
+
+
+<div class="container reveal active">
 
 
 <div class="strip">
-		<h2> Product SC: Social Media Redesign</h2>
+
+		<h2> Instagram Before and After </h2>
+	</div> <!-- strip -->
+	
+	<div id= "row2">
+			<img class="img-duo" src="productsc/before.PNG" alt="perlman">
+			
+		<div id="beforeafter">
+	 			 <h2> Product SC </h2>  
+				<p class="description-p" id="productsc-descripton"> 
+
+
+				Product SC's Instagram page underwent a significant transformation. Previously, the page lacked a cohesive visual identity making it less appealing. The content posted on the page lacked consistency in terms of color schemes, typography, and imagery, making it hard for followers to identify with the brand. However, with the help of our design team, the page underwent a significant revamp. My team and I created visually appealing Instagram templates that incorporated the company's brand colors, typography, and imagery, creating a cohesive and recognizable visual identity. The templates used on the page allowed for consistency in the brand's messaging and design. As a result, the page has seen a considerable increase in engagement, with more followers interacting with and sharing the content. </p>
+			
+		</div> <!-- before/ after  -->
+		<img class="img-duo" src="productsc/after.PNG" alt="perlman">
+	</div> 
+
+
+
+
+
+
+
+
+
+<div class="strip">
+		<h2> Final Deliverables</h2>
 	</div> 
 
 <div class="organic">
@@ -204,23 +298,6 @@ Rebrands
 
 
 
-<div class="strip">
-		<h2> Instagram Before and After </h2>
-	</div> <!-- strip -->
-	
-	<div id= "row2">
-			<img class="img-duo" src="productsc/before.PNG" alt="perlman">
-			<img class="img-duo" src="productsc/after.PNG" alt="perlman">
-		<div id="beforeafter">
-	 			 <h2> Product SC </h2>  
-				<p class="description-p" id="productsc-descripton"> 
-
-
-				Product SC's Instagram page underwent a significant transformation. Previously, the page lacked a cohesive visual identity making it less appealing. The content posted on the page lacked consistency in terms of color schemes, typography, and imagery, making it hard for followers to identify with the brand. However, with the help of our design team, the page underwent a significant revamp. My team and I created visually appealing Instagram templates that incorporated the company's brand colors, typography, and imagery, creating a cohesive and recognizable visual identity. The templates used on the page allowed for consistency in the brand's messaging and design. As a result, the page has seen a considerable increase in engagement, with more followers interacting with and sharing the content. </p>
-			
-		</div> <!-- before/ after  -->
-		
-	</div> 
 
 
 
@@ -238,7 +315,7 @@ Rebrands
  		<div class="left-1">
  			<div class="title">
 	 			<img class="leaf" src="img/leaf-03.png" alt= "-">
-	 			 <h2> Ravinia College Consulting  </h2>  
+	 			 <h2> Sticker Designs</h2>  
 	 		</div><!--  section title -->
 	 		
 		</div> <!-- left text -->
@@ -264,12 +341,12 @@ Rebrands
 
 <div class="button-group">
 				<div class="sc-button">
-					<form action="adobe.html">
+					<form action="execed.html">
 						<button class="scbutton" type="submit"> ← Prev Project</button> 
 					</form>
 				</div>
 				<div class="sc-button">
-					<form action="dynamic.html">
+					<form action="adobe.html">
 							<button class="scbutton" type="submit"> Next Project → </button> 
 					</form>
 				</div>
@@ -294,6 +371,7 @@ Rebrands
 		<div class="tabs">
  			<a href= "home.html" >Home </a>
  		<a href= "home.html#work">Projects </a>
+ 		<a href= "gallery.html">Gallery </a>
  		<a href= "resume.html">About Me </a>
  		</div> <!-- page tabs -->
 	</div> <!-- nav bar -->
