--- a/Design_Portfolio/resume.html
+++ b/Design_Portfolio/resume.html
@@ -9,11 +9,15 @@ Resume
 	</title>
 
 <style>
-
-	#banner:hover {
-		width: 1000px;
-		transform: translateX( -520px);
+	
+	.resume {
+		display: flex;
+		justify-content: center;
 	}
+	#resume {
+		width: 60%;
+	}
+	
 </style>
 </head>
 <body>
@@ -38,12 +42,22 @@ Resume
 	 		<p>Hello, my name is Christina Doolan. I am originally from Denver, CO, and I am currently a Sophomore majoring in Cognitive Science and minoring in both communication design and web development at the University of Southern California. I am highly interested in the development and design sides of marketing and am incredibly interested in pursuing a career in UX/UI design. I currently work for USC Marshall executive education as their design intern and am looking forward to continuing to expand my knowledge of this field. I am an active member of the American Marketing Association at my school, as well as on the design team for Innovation Design. Lastly, I am extremely active and adventurous which you can see through my executive board position on USC club track and my various other hobbies. </p>
 	 	</div> <!-- leftsection of home screen -->
  		<div class="right">
- 			<img id="banner" src="img/resume.png" alt="face image">
+ 			<img id="banner" src="img/christina.jpg" alt="face image">
  		</div>
 
  </div><!--  first section -->
 
 
+<hr>
+
+
+<div class="strip">
+		<h2> Resume </h2>
+	</div> 
+ <div class="resume">
+<img id="resume" src= "img/resume-1.png">
+</div>
+<hr>
 
 
 
