--- a/Design_Portfolio/resume.html
+++ b/Design_Portfolio/resume.html
@@ -29,6 +29,7 @@ Resume
 		
  		<a href= "home.html" >Home </a>
  		<a href= "home.html#work">Projects </a>
+ 		<a href= "gallery.html">Gallery </a>
  		<a href= "resume.html">About Me </a>
  	</div> <!-- nav bar -->
 
@@ -74,6 +75,7 @@ Resume
 		<div class="tabs">
  			<a href= "home.html" >Home </a>
  		<a href= "home.html#work">Projects </a>
+ 		<a href= "gallery.html">Gallery </a>
  		<a href= "resume.html">About Me </a>
  		</div> <!-- page tabs -->
 	</div> <!-- nav bar -->
