--- a/Design_Portfolio/gallery.html
+++ b/Design_Portfolio/gallery.html
@@ -130,7 +130,12 @@ Portfolio_CDoolan_Home
 
 	<a href= "home.html" >
 		<img id="logo" src= "img/logo.png" alt="CJD"> </a>
-
+			<a href= "https://www.linkedin.com/in/christina-doolan-36b1a224a/" target =_blank>
+	 			<img id="linked" src= "img/linkedin.png" alt= "linkedin">
+	 		</a>
+	 		<a href= "mailto:cdoolan@usc.edu" target=_blank>
+	 			<img id="mail" src= "img/mail.png" alt="email">
+	 		</a>
 	<div id= "navbar">
 		
  		<a href= "home.html" >Home </a>
