--- a/Design_Portfolio/resume.html
+++ b/Design_Portfolio/resume.html
@@ -43,7 +43,7 @@ Resume
 	 		<p>Hello, my name is Christina Doolan. I am originally from Denver, CO, and I am currently a Sophomore majoring in Cognitive Science and minoring in both communication design and web development at the University of Southern California. I am highly interested in the development and design sides of marketing and am incredibly interested in pursuing a career in UX/UI design. I currently work for USC Marshall executive education as their design intern and am looking forward to continuing to expand my knowledge of this field. I am an active member of the American Marketing Association at my school, as well as on the design team for Innovation Design. Lastly, I am extremely active and adventurous which you can see through my executive board position on USC club track and my various other hobbies. </p>
 	 	</div> <!-- leftsection of home screen -->
  		<div class="right">
- 			<img id="banner" src="img/christina.jpg" alt="face image">
+ 			<img id="banner" src="img/christina.png" alt="face image">
  		</div>
 
  </div><!--  first section -->
