--- a/Design_Portfolio/gallery.html
+++ b/Design_Portfolio/gallery.html
@@ -167,7 +167,7 @@ Portfolio_CDoolan_Home
 		<h2> GALLERY </h2>
 	</div> 
 	<div class="drafty">
-	<img id="gallery" src="img/GALLERY.png" alt="gallery">
+	<img id="gallery" src="img/GALLERY.jpg" alt="gallery">
 </div>
 </div>
 
