--- a/Design_Portfolio/resume.html
+++ b/Design_Portfolio/resume.html
@@ -56,7 +56,7 @@ Resume
 		<h2> Resume </h2>
 	</div> 
  <div class="resume">
-<img id="resume" src= "img/resume-1.png">
+<img id="resume" src= "img/Christina_Doolan_Resume.png" alt= "Christina_Doolan_Resume">
 </div>
 
 
