--- a/Design_Portfolio/adobe.html
+++ b/Design_Portfolio/adobe.html
@@ -2,7 +2,7 @@
 <html> 
 <head>
 	<title>
-Adobe
+Playing Cards
 	</title>
 
 <link rel= "stylesheet" href= "shared.css">
@@ -82,7 +82,7 @@ Create a visually appealing and informative pop-up banner design for Marshall Ex
 		</div> <!-- descriptioin -->
 	</div>
 
-<div id="inspiration">
+<div class="inspiration">
 	<h3 class="descriptor"> Inspiration </h3>
 	<div class="trio">
 		<img class="img-trio" src="adobe/inspo-1.png" alt="inspo-1">
@@ -93,20 +93,20 @@ Create a visually appealing and informative pop-up banner design for Marshall Ex
 
 </div>
 
-	<div id="inspiration">
+	<div class="inspiration">
 	<h3 class="descriptor"> Design Process </h3>
 	<div class="trio">
-		<p id="item"> Define Project </p>
+		<p class="item"> Define Project </p>
 		<img class="arrow" src="dynamic/arrow.png" alt="-->">
-		<p id="item"> Visual Research </p>
+		<p class="item"> Visual Research </p>
 		<img class="arrow" src="dynamic/arrow.png" alt="-->">
-		<p id="item"> Create Drafts </p>
+		<p class="item"> Create Drafts </p>
 		<img class="arrow" src="dynamic/arrow.png" alt="-->">
-		<p id="item"> Team Feedback(x4) </p>
+		<p class="item"> Team Feedback(x4) </p>
 		<img class="arrow" src="dynamic/arrow.png" alt="-->">
-		<p id="item"> Test Prints</p>
+		<p class="item"> Test Prints</p>
 		<img class="arrow" src="dynamic/arrow.png" alt="-->">
-		<p id="item">Refine Drafts(x4)</p>
+		<p class="item">Refine Drafts(x4)</p>
 
 	
 	</div>
@@ -155,10 +155,10 @@ Create a visually appealing and informative pop-up banner design for Marshall Ex
 
 	<div class="section">
 			
-		<div id= "row2">
+		<div class= "row2">
 			<img class="img-duo" src="adobe/front1.png" alt="perlman">
 			<img class="img-duo" src="adobe/front2.png" alt="perlman">
-		<div id="beforeafter">
+		<div class="beforeafter">
 	 			 <h2 class="caption"> Final Card Design: Front </h2>  
 			
 			
@@ -169,10 +169,10 @@ Create a visually appealing and informative pop-up banner design for Marshall Ex
 
 	<div class="section">
 			
-		<div id= "row2">
+		<div class= "row2">
 			<img class="back" src="adobe/back.png" alt="perlman">
 			
-		<div id="beforeafter">
+		<div class="beforeafter">
 	 			 <h2 class="caption"> Final Card Design: Back </h2>  
 			
 			
@@ -181,10 +181,10 @@ Create a visually appealing and informative pop-up banner design for Marshall Ex
 	</div> 
 	<div class="section">
 			
-		<div id= "row2">
+		<div class= "row2">
 			<img class="back" src="adobe/box.png" alt="perlman">
 			
-		<div id="beforeafter">
+		<div class="beforeafter">
 	 			 <h2 class="caption"> Final Card Design: Box</h2>  
 			
 			
@@ -195,10 +195,10 @@ Create a visually appealing and informative pop-up banner design for Marshall Ex
 
 <div class="section">
 			
-		<div id= "row2">
+		<div class= "row2">
 			<img class="back" src="adobe/rules.png" alt="perlman">
 			
-		<div id="beforeafter">
+		<div class="beforeafter">
 	 			 <h2 class="caption"> Final Card Design: Rules</h2>  
 			
 			
