--- a/Design_Portfolio/dynamic.html
+++ b/Design_Portfolio/dynamic.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html> 
 <html><head>
 	<title>
-UX/UI
+Portfolio
 	</title>
 
 	<meta name="description" content="Dynamic Designs Section of Christina Doolan's design portfolio. Works include website coding and website creation. All produced for fun or for class projects">
@@ -116,7 +116,7 @@ Design and implement a personal design portfolio website that showcases your cre
 	</div><!--  organic post		 -->
 
 
-<div id="inspiration">
+<div class="inspiration">
 	<h3 class="descriptor"> Inspiration </h3>
 	<div class="trio">
 		<img class="img-trio" src="dynamic/inspo1.png" alt="inspo-1">
@@ -127,24 +127,24 @@ Design and implement a personal design portfolio website that showcases your cre
 </div>
 
 
-	<div id="inspiration">
+	<div class="inspiration">
 	<h3 class="descriptor"> Design Process </h3>
 	<div class="trio">
-		<p id="item"> Define Project </p>
+		<p class="item"> Define Project </p>
 		<img class="arrow" src="dynamic/arrow.png" alt="-->">
-		<p id="item"> Visual Research </p>
+		<p class="item"> Visual Research </p>
 		<img class="arrow" src="dynamic/arrow.png" alt="-->">
-		<p id="item"> Create Wireframe </p>
+		<p class="item"> Create Wireframe </p>
 		<img class="arrow" src="dynamic/arrow.png" alt="-->">
-		<p id="item"> Code Website </p>
+		<p class="item"> Code Website </p>
 		<img class="arrow" src="dynamic/arrow.png" alt="-->">
-		<p id="item">Class Feedback (Continuous)<p>
+		<p class="item">Class Feedback (Continuous)</p>
 			<img class="arrow" src="dynamic/arrow.png" alt="-->">
-		<p id="item"> Edit (Continuous)</p>
+		<p class="item"> Edit (Continuous)</p>
 	</div>
 </div>
 
-
+</div>
 
 
 <div class="strip">
@@ -246,4 +246,5 @@ window.addEventListener("scroll", reveal);
 
  
 
-</body></html>
+</body>
+</html>
