--- a/Design_Portfolio/execed.html
+++ b/Design_Portfolio/execed.html
@@ -1,7 +1,7 @@
-<h<!DOCTYPE html> 
+<!DOCTYPE html> 
 <html><head>
 	<title>
-Execed
+Pop-up
 	</title>
 
 	 <meta name="description" content="Executive Education Section of Christina Doolan's design portfolio. Works include organic posts, banners, and custom text">
@@ -63,7 +63,7 @@ Execed
 		margin-right: 40px;
 		margin-left: 40px;
 	}
-	#final{
+	.final{
 		width: 400px;
 		margin-right:40px;
 		margin-left:40px;
@@ -125,7 +125,7 @@ Create a visually appealing and informative pop-up banner design for Marshall Ex
 	</div><!--  organic post		 -->
 
 
-<div id="inspiration">
+<div class="inspiration">
 	<h3 class="descriptor"> Inspiration </h3>
 	<div class="trio">
 		<img class="img-trio" src="execed/inspo-1.png" alt="inspo-1">
@@ -135,23 +135,23 @@ Create a visually appealing and informative pop-up banner design for Marshall Ex
 
 </div>
 
-	<div id="inspiration">
+	<div class="inspiration">
 	<h3 class="descriptor"> Design Process </h3>
 	<div class="trio">
-		<p id="item"> Define Project </p>
+		<p class="item"> Define Project </p>
 		<img class="arrow" src="dynamic/arrow.png" alt="-->">
-		<p id="item"> Visual Research </p>
+		<p class="item"> Visual Research </p>
 		<img class="arrow" src="dynamic/arrow.png" alt="-->">
-		<p id="item"> Create Drafts </p>
+		<p class="item"> Create Drafts </p>
 		<img class="arrow" src="dynamic/arrow.png" alt="-->">
-		<p id="item"> Team Feedback </p>
+		<p class="item"> Team Feedback </p>
 		<img class="arrow" src="dynamic/arrow.png" alt="-->">
-		<p id="item">Refine Drafts</p>
+		<p class="item">Refine Drafts</p>
 
 			<img class="arrow" src="dynamic/arrow.png" alt="-->">
-		<p id="item"> Convert to EPS Files</p>
+		<p class="item"> Convert to EPS Files</p>
 		<img class="arrow" src="dynamic/arrow.png" alt="-->">
-			<p id="item">Contact Print Company</p>
+			<p class="item">Contact Print Company</p>
 	</div>
 </div>
 
@@ -196,8 +196,8 @@ Create a visually appealing and informative pop-up banner design for Marshall Ex
 	</div> <!-- strip -->
 
 		<div class="trio">
-			<img id="final" src="execed/final-1.png" alt="final">
-				<img id="final" src="execed/popup.png" alt="final">
+			<img class="final" src="execed/final-1.png" alt="final">
+				<img class="final" src="execed/popup.png" alt="final">
 		</div>
 
 	<div class="button-group">
