--- a/Design_Portfolio/gallery.html
+++ b/Design_Portfolio/gallery.html
@@ -2,7 +2,7 @@
 <html> 
 <head>
 	<title>
-Portfolio_CDoolan_Home
+Galllery
 	</title>
 
 	 <meta name="description" content="Christina Doolan's design portfolio and Resume. Works include projects from executive eduction internship, innovation design club, Adobe, and more.">
