--- a/Design_Portfolio/home.html
+++ b/Design_Portfolio/home.html
@@ -158,10 +158,11 @@ Portfolio_CDoolan_Home
 
 
  		<hr>
-
+<div id="work">
 
 
  		<div class="container reveal active">
+
 
 	<div class="dynamic">
  		<div class="left">
@@ -211,7 +212,7 @@ Portfolio_CDoolan_Home
 
 </div>
 
-</div>
+
 
 
  		<hr>
@@ -243,7 +244,7 @@ Portfolio_CDoolan_Home
 
 </div>
 
-</div>
+
 
 
  		<hr>
@@ -270,7 +271,7 @@ Portfolio_CDoolan_Home
 
 </div>
 
-</div>
+
 
 
  		<hr>
@@ -301,7 +302,6 @@ Portfolio_CDoolan_Home
 
 </div>
 
-</div>
 
 
  		<hr>
@@ -328,56 +328,7 @@ Portfolio_CDoolan_Home
 	</div> <!-- nav bar -->
 
 
-<!--
 
-
-<div class="container reveal active">
- 	<div id="productsc">
- 		<div class="left">
- 			<div class="title">
-	 			<img class="leaf" src="img/leaf-03.png" alt="-">
-	 			 <h2> Company Rebrands </h2>  
-	 		</div>
-	 		<p class="role"> STYLE GUIDELINE REDESIGN </p>
-	 		
-		
-				<p class="description-p" id="productsc-descripton"> Projects involving redesigning companies' logos, Instagram templates, sample slides, etc. Goal of boosting website and Instagram engagement. </p>
-			<form action= "productsc.html">
-				<button class="sc-button" type="submit"> View Projects</button> 
-			</form>
-		</div> 
-		<div class="formattwo">
-				<img class="test" src= "productsc/productsc.png" alt="Homepage Image">
-		</div>
-	</div> 
-			
-	</div>
-
-
- 		
-
-
-
-
-
-<div class= "footer-navbar">
-		<div class="links-footer">
-			<a href= "https://www.linkedin.com/in/christina-doolan-36b1a224a/" target =_blank>
-	 			<img class="linked-footer" src= "img/linkedin.png" alt= "linkedin">
-	 		</a>
-	 		<a href= "mailto:cdoolan@usc.edu" target=_blank>
-	 			<img class="mail-footer" src= "img/mail.png" alt="mail">
-	 		</a>
-		 </div> 
- 			
-		<div class="tabs">
- 			<a href= "home.html" >Home </a>
- 		<a href= "home.html#work">Projects </a>
- 		<a href= "resume.html">About Me </a>
- 		</div> 
-	</div> 
-
-		-->
 
 
 <script>
