--- a/Design_Portfolio/movie.html
+++ b/Design_Portfolio/movie.html
@@ -1,7 +1,7 @@
-<h<!DOCTYPE html> 
+<!DOCTYPE html> 
 <html><head>
 	<title>
-Execed
+Movie Poster
 	</title>
 
 	 <meta name="description" content="Executive Education Section of Christina Doolan's design portfolio. Works include organic posts, banners, and custom text">
@@ -63,7 +63,7 @@ Execed
 		margin-right: 40px;
 		margin-left: 40px;
 	}
-	#final{
+	.final{
 		width: 400px;
 		margin-right:40px;
 		margin-left:40px;
@@ -135,7 +135,7 @@ This project aimed to create a promotional movie poster for a film that had alre
 	</div><!--  organic post		 -->
 
 
-<div id="inspiration">
+<div class="inspiration">
 	<h3 class="descriptor"> Inspiration </h3>
 	<div class="trio">
 		<img class="img-trio" src="movie/inspo-1.png" alt="inspo-1">
@@ -147,20 +147,20 @@ This project aimed to create a promotional movie poster for a film that had alre
 	</div>
 
 </div>
-<div id="inspiration">
+<div class="inspiration">
 	<h3 class="descriptor"> Design Process </h3>
 	<div class="trio">
-		<p id="item"> Define Project </p>
+		<p class="item"> Define Project </p>
 		<img class="arrow" src="dynamic/arrow.png" alt="-->">
-		<p id="item"> Visual Research </p>
+		<p class="item"> Visual Research </p>
 		<img class="arrow" src="dynamic/arrow.png" alt="-->">
-		<p id="item"> Create Drafts </p>
+		<p class="item"> Create Drafts </p>
 		<img class="arrow" src="dynamic/arrow.png" alt="-->">
-		<p id="item"> Team Feedback(x4) </p>
+		<p class="item"> Team Feedback(x4) </p>
 		<img class="arrow" src="dynamic/arrow.png" alt="-->">
-		<p id="item"> Test Prints</p>
+		<p class="item"> Test Prints</p>
 		<img class="arrow" src="dynamic/arrow.png" alt="-->">
-		<p id="item">Refine Drafts(x4)</p>
+		<p class="item">Refine Drafts(x4)</p>
 
 	
 	</div>
@@ -182,6 +182,7 @@ This project aimed to create a promotional movie poster for a film that had alre
 		<img class="DRAFT" src="movie/og-2.png" alt="draft-1">
 		<img class="DRAFT" src="movie/og-3.png" alt="draft-1">
 	</div>
+</div>
 </div>
 
 
@@ -230,8 +231,8 @@ This project aimed to create a promotional movie poster for a film that had alre
 	</div> <!-- strip -->
 
 		<div class="trio">
-			<img id="final" src="movie/final.png" alt="final">
-				<img id="final" src="adobe/home2.png" alt="final">
+			<img class="final" src="movie/final.png" alt="final">
+				<img class="final" src="adobe/home2.png" alt="final">
 		</div>
 
 	<div class="button-group">
