--- a/Design_Portfolio/productsc.html
+++ b/Design_Portfolio/productsc.html
@@ -2,7 +2,7 @@
 <html> 
 <head>
 	<title>
-Rebrands
+Product SC
 	</title>
 
 <link rel= "stylesheet" href= "shared.css">
@@ -28,7 +28,7 @@ Rebrands
 #first-draft {
 	width: 75%;
 }
-.
+
 </style>
 </head>
 <body>
@@ -58,7 +58,7 @@ Rebrands
 
  </div><!--  first section -->
 
-
+<hr>
 
 <div class="container reveal active">
 
@@ -77,7 +77,7 @@ Revamp and rebrand the "Product SC" club with a team of four designers, aiming t
 	</div><!--  organic post		 -->
 
 
-<div id="inspiration">
+<div class="inspiration">
 	<h3 class="descriptor"> Inspiration </h3>
 	<div class="trio">
 		<img class="img-trio" src="productsc/inspo-1.jpeg" alt="inspo-1">
@@ -87,26 +87,26 @@ Revamp and rebrand the "Product SC" club with a team of four designers, aiming t
 
 </div>
 
-	<div id="inspiration">
+	<div class="inspiration">
 	<h3 class="descriptor"> Design Process </h3>
 	<div class="trio">
-		<p id="item"> Define Project </p>
+		<p class="item"> Define Project </p>
 		<img class="arrow" src="dynamic/arrow.png" alt="-->">
-		<p id="item"> Visual Research </p>
+		<p class="item"> Visual Research </p>
 		<img class="arrow" src="dynamic/arrow.png" alt="-->">
-		<p id="item"> Lo-Fi</p>
+		<p class="item"> Lo-Fi</p>
 		<img class="arrow" src="dynamic/arrow.png" alt="-->">
-		<p id="item"> Whole Club Feedback </p>
+		<p class="item"> Whole Club Feedback </p>
 		<img class="arrow" src="dynamic/arrow.png" alt="-->">
-		<p id="item">Mid-Fi</p>
+		<p class="item">Mid-Fi</p>
 
 			<img class="arrow" src="dynamic/arrow.png" alt="-->">
-		<p id="item"> Whole Club Feedback</p>
+		<p class="item"> Whole Club Feedback</p>
 
 		<img class="arrow" src="dynamic/arrow.png" alt="-->">
-		<p id="item"> High-Fi</p>
+		<p class="item"> High-Fi</p>
 		<img class="arrow" src="dynamic/arrow.png" alt="-->">
-			<p id="item">Present to Product SC</p>
+			<p class="item">Present to Product SC</p>
 	</div>
 </div>
 
@@ -152,7 +152,6 @@ Revamp and rebrand the "Product SC" club with a team of four designers, aiming t
 
 
 
-<div class="container reveal active">
 
 
 <div class="strip">
@@ -160,10 +159,10 @@ Revamp and rebrand the "Product SC" club with a team of four designers, aiming t
 		<h2> Instagram Before and After </h2>
 	</div> <!-- strip -->
 	
-	<div id= "row2">
+	<div class= "row2">
 			<img class="img-duo" src="productsc/before.PNG" alt="perlman">
 			
-		<div id="beforeafter">
+		<div class="beforeafter">
 	 			 <h2> Product SC </h2>  
 				<p class="description-p" id="productsc-descripton"> 
 
@@ -174,13 +173,13 @@ Revamp and rebrand the "Product SC" club with a team of four designers, aiming t
 		<img class="img-duo" src="productsc/after.PNG" alt="perlman">
 	</div> 
 
+</div>
 
 
 
 
 
-
-
+<div class="container reveal active">
 
 <div class="strip">
 		<h2> Final Deliverables</h2>
@@ -295,7 +294,7 @@ Revamp and rebrand the "Product SC" club with a team of four designers, aiming t
 		</div> <!-- trio -->
 
 
-
+</div>
 
 
 
@@ -309,7 +308,7 @@ Revamp and rebrand the "Product SC" club with a team of four designers, aiming t
 
 
 
-
+<div class="container reveal active">
 
 <div class="organic">
  		<div class="left-1">
@@ -352,6 +351,7 @@ Revamp and rebrand the "Product SC" club with a team of four designers, aiming t
 				</div>
 		</div>
 
+</div>
 
 
 
