--- a/index.html
+++ b/index.html
@@ -96,6 +96,7 @@ Christina Doolan | Student Page
 			<li><a href= "https://stackblitz.com/edit/react-hdhh8q?file=src%2Findex.js"> Lab 5: React Student Page</a> </li> 
 			<li><a href= "https://stackblitz.com/edit/react-dstxgp?file=src%2Findex.js"> Lab 6: Static Page with Components</a> </li>
 			<li><a href= "https://stackblitz.com/edit/react-amwssn?file=public%2Findex.html "> Lab 7: React Photo Gallery</a> </li>  
+			<li><a href= "https://stackblitz.com/edit/react-ufjesk?file=public%2Findex.html"> Lab 8: Shopping Cart With Subtotal</a> </li> 
 
 			</ol> 
 		</div> <!-- labs -->
