--- a/assignment_08/project_proposal.html
+++ b/assignment_08/project_proposal.html
@@ -41,7 +41,7 @@ Project Proposal
 		<h2> Design & Style </h2>
 			<p>The website's style will be characterized by a simplistic and feminine design, enriched with interactive and playful elements.</p>
 		<h3> Color Scheme </h3>
-		<img src= "img/Color.jpg" alt="colorscheme"> 
+		<img src="img/Color.png" alt="Color Palette">
 		<p> The style will match the style of my personal branding seen below </p>
 		<img src= "img/style.png" alt="colorscheme"> 
 		<h2> Inspiration Websites </h2>
