--- a/Design_Portfolio/home.html
+++ b/Design_Portfolio/home.html
@@ -233,7 +233,7 @@ Portfolio_CDoolan_Home
 	 		</div><!--  section title -->
 	 		<p class="role"> Innovation Design small group project</p>
 	 		
-			<form action= "execed.html">
+			<form action= "productsc.html">
 				<button class="sc-button" type="submit"> View Project</button> 
 			</form>
 		</div> <!-- left side text -->
